# VanJamSPE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
apps/: faceDetection.cpp  input_test.cpp  output_test.cpp  simple_test.cpp
src/: Data.h  Engine.cpp  Engine.h  GenericOperator.cpp  GenericOperator.h  IOp.h  InputOperator.cpp  InputOperator.h  Makefile  Operator.cpp  Operator.h  SafeQueue.h  UnaryOperator.cpp  UnaryOperator.h  VanJamSPE.h  data.txt  main.cpp  processStream.h  readme.md
